[build-system]
build-backend = "cmeel"
requires = ["cmeel-assimp >= 5.2.5.1, < 6", "cmeel-octomap >= 1.9.8.2, < 2", "cmeel-qhull >= 8.0.2, < 8.0.3", "cmeel[build]", "eigenpy[build] >= 3.1, < 4"]

[project]
dependencies = ["cmeel-assimp >= 5.2.5.1, < 6", "cmeel-boost ~= 1.82.0", "cmeel-octomap >= 1.9.8.2, < 2", "cmeel-qhull >= 8.0.2, < 8.0.3", "eigenpy >= 3.1, < 4"]
description = " An extension of the Flexible Collision Library"
license = "BSD-3-Clause"
name = "hpp-fcl"
version = "2.3.5"

[project.urls]
homepage = "https://github.com/humanoid-path-planner/hpp-fcl"

[tool.cmeel]
build-number = 1
configure-args = ["-DHPP_FCL_HAS_QHULL=ON"]

[tool.tomlsort]
all = true
